--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.16",
     "@tanstack/react-router": "^1.114.27",
+    "@types/node": "^22.13.13",
+    "axios": "^1.8.4",
     "flowbite": "^3.1.2",
+    "jose": "^6.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.16"
