--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jose": "^6.0.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "tailwindcss": "^4.0.16"
   },
   "devDependencies": {
